--- a/style.css
+++ b/style.css
@@ -6,11 +6,11 @@
 }
 
 .paragraph{
-font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+font-family: Arial, Helvetica, sans-serif;
 font-size: 20px;
 letter-spacing: 1px;
 word-spacing: 1.8px;
-color: #000000;
+color: rgb(0, 17, 255);
 font-weight: 500;
 text-decoration: none;
 font-style: normal;
