--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@media(min-width:768px){
 .container {
     display:flex;
     font-family: sans-serif;
@@ -41,6 +42,7 @@
     margin-right: 1em;
     margin-left: 1em;
 
+}
 }
 
 .paragraph{
