--- a/style.css
+++ b/style.css
@@ -70,3 +70,28 @@ margin-right: 1em;
 margin-left: 1em;
 
 }
+
+.container-output{
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    letter-spacing: 1px;
+    word-spacing: 1.8px;
+    color: rgb(0, 17, 255);
+    font-weight: 500;
+    text-decoration: none;
+    font-style: normal;
+    font-variant: normal;
+    text-transform: none;
+    border: 6px solid rgba(5,20,30,0.73);
+    
+    padding-left: 1.5em;
+    padding-right: 1.5em;
+    padding-top: 1.5em;
+    padding-bottom: 1.5em;
+    margin-top: 1em; 
+    margin-bottom: 1em;
+    margin-right: 1em;
+    margin-left: 1em;
+
+}
