--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ font-family: Arial, Helvetica, sans-serif;
 font-size: 20px;
 letter-spacing: 1px;
 word-spacing: 1.8px;
-color: rgb(0, 17, 255);
+color:darkred;
 font-weight: 500;
 text-decoration: none;
 font-style: normal;
